# spyre

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/client/: index.html
api/crm/: index.html
api/customers/: index.html
api/inventory/: index.html
api/purchasing/: index.html
api/sales/: index.html
api/spire/: index.html
api/v0/: Exceptions.py  baseClient.py  client.py  customers.py  inventory.py  sales.py  sales_client.py  spire.py  utils.py
api/v0/Models/: sales.py  sales_models.py  shared_models.py
docs/: index.md
docs/api/: client.md  crm.md  customers.md  inventory.md  purchasing.md  sales.md  spire.md
search/: search_index.json
spyre/: config.py
spyre/Models/: inventory_models.py  sales_models.py
src/spyre/: Exceptions.py  __init__.py  client.py  config.py  crm.py  customers.py  inventory.py  purchasing.py  sales.py  spire.py  utils.py
src/spyre/Models/: customers_models.py  inventory_models.py  purchasing_models.py  sales_models.py  shared_models.py
